responsive vids, no header on mobile, fix animations on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -18,6 +18,24 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* Color schemes */
 .demo-1 {
 	--color-text: #fff;
@@ -118,6 +136,12 @@ main {
 	justify-content: center;
 	grid-area: header;
 	justify-self: start;
+}
+
+@media screen and (max-width: 40em) {
+	.header {
+		display: none;
+	}
 }
 
 .header__title {
